--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "start": "node index.js",
     "dev": "node --watch index.js"
   },
-  "dependencies": {
-    "discord.js": "^14.14.1",
-    "node-cron": "^3.0.3"
-  },
+"dependencies": {
+  "discord.js": "^14.14.1",
+  "node-cron": "^3.0.3",
+  "node-fetch": "^3.3.2"
+},
   "engines": {
     "node": ">=18.0.0"
   },
