--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 "dependencies": {
   "discord.js": "^14.14.1",
   "node-cron": "^3.0.3",
-  "node-fetch": "^3.3.2"
+  "node-fetch": "^3.3.2",
+  "express": "^4.19.2"
 },
   "engines": {
     "node": ">=18.0.0"
